--- a/progress-bubble.html
+++ b/progress-bubble.html
@@ -15,7 +15,7 @@
             text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
             color: #fff;
         }
-        svg, div {
+        :host svg, :host div {
             opacity: 0;
             transition: opacity 150ms;
         }
@@ -39,7 +39,7 @@
             @apply(--layout-vertical);
             @apply(--layout-center-center);
         }
-        svg {
+        :host svg {
             position: absolute;
             top: 0;
             left: 0;
